--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="info-right-box-text">
               <h3>Orientation date</h3>
               <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-              <a href="#">Read more</a>
+              <div><a href="#">Read more</a></div>
             </div>
           </div>
           
@@ -85,8 +85,8 @@
             </div>
             <div class="info-right-box-text">
               <h3>Our campus</h3>
-              <p>Find which campus is close by you</p>
-              <a href="#">Read more</a>
+              <p>Find which campus is close by you.</p>
+              <div><a href="#">Read more</a></div>
             </div>
           </div>
           
@@ -98,7 +98,7 @@
             <div class="info-right-box-text">
               <h3>Our guest lecture</h3>
               <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-              <a href="#">Read more</a>
+              <div><a href="#">Read more</a></div>
             </div>
           </div>
         </div>
